--- a/app/login.ejs
+++ b/app/login.ejs
@@ -16,7 +16,7 @@
                     </g>
                 </svg>
                 <span class="loginErrorSpan" id="loginEmailError">* Valeur invalide</span>
-                <input id="loginUsername" class="loginField" type="text" placeholder="Nom d'utilisateur"/>
+                <input id="loginUsername" class="loginField" type="text" placeholder="Adresse e-mail"/>
             </div>
             <div class="loginFieldContainer">
                 <svg id="lockSVG" class="loginSVG" viewBox="40 32 60.36 70.43">
