--- a/app/landing.ejs
+++ b/app/landing.ejs
@@ -11,7 +11,7 @@
         <div id="right">
             <div id="rightContainer">
                 <div id="user_content">
-                    <span id="user_text">Nom d'utilisateur</span>
+                    <span id="user_text">Adresse e-mail</span>
                     <div id="avatarContainer">
                         <button id="avatarOverlay">Modifier</button>
                     </div>
@@ -99,25 +99,6 @@
                         <span class="bot_label" id="landingPlayerLabel">SERVEUR</span>
                         <span id="player_count">HORS-LIGNE</span>
                     </div>
-                    <div class="bot_divider"></div>
-                    <div id="mojangStatusWrapper">
-                        <span class="bot_label">MOJANG STATUS</span>
-                        <span id="mojang_status_icon">&#8226;</span>
-                        <div id="mojangStatusTooltip">
-                            <div id="mojangStatusTooltipTitle">Services</div>
-                            <div id="mojangStatusEssentialContainer">
-                                <!-- Essential Mojang services are populated here. -->
-                            </div>
-                            <div id="mojangStatusNEContainer">
-                                <div class="mojangStatusNEBar"></div>
-                                <div id="mojangStatusNETitle">Non&nbsp;Essential</div>
-                                <div class="mojangStatusNEBar"></div>
-                            </div>
-                            <div id="mojangStatusNonEssentialContainer">
-                                <!-- Non Essential Mojang services are populated here. -->
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -133,7 +114,7 @@
                             </defs>
                             <polyline class="arrowLine" points="0.71 13.26 12.56 1.41 24.16 13.02"/>
                         </svg>
-                        &#10;<span id="newsButtonText">NEWS</span>
+                        &#10;<span id="newsButtonText">ACTUALITÉS</span>
                     </button>
                 </div>
             </div>
@@ -141,9 +122,9 @@
         <div id="right">
             <div class="bot_wrapper">
                 <div id="launch_content">
-                    <button id="launch_button">PLAY</button>
+                    <button id="launch_button">JOUER</button>
                     <div class="bot_divider"></div>
-                    <button id="server_selection_button" class="bot_label">&#8226; No Server Selected</button>
+                    <button id="server_selection_button" class="bot_label">&#8226; Aucun serveur sélectionné</button>
                 </div>
                 <div id="launch_details">
                     <div id="launch_details_left">
@@ -152,7 +133,7 @@
                     </div>
                     <div id="launch_details_right">
                         <progress id="launch_progress" value="22" max="100"></progress>
-                        <span id="launch_details_text" class="bot_label">Please wait..</span>
+                        <span id="launch_details_text" class="bot_label">Patientez..</span>
                     </div>
                 </div>
             </div>
@@ -205,14 +186,14 @@
         </div>
         <div id="newsErrorContainer">
             <div id="newsErrorLoading">
-                <span id="nELoadSpan" class="newsErrorContent">Checking for News..</span>
+                <span id="nELoadSpan" class="newsErrorContent">Verification des actualités..</span>
             </div>
             <div id="newsErrorFailed" style="display: none;">
-                <span id="nEFailedSpan" class="newsErrorContent">Failed to Load News</span>
+                <span id="nEFailedSpan" class="newsErrorContent">Impossible de charger les actualités</span>
                 <button id="newsErrorRetry">Try Again</button>
             </div>
             <div id="newsErrorNone" style="display: none;">
-                <span id="nENoneSpan" class="newsErrorContent">No News</span>
+                <span id="nENoneSpan" class="newsErrorContent">Aucune actualité</span>
             </div>
         </div>
     </div>
