Rebrand vers AerisLauncher

--- a/app/login.ejs
+++ b/app/login.ejs
@@ -2,7 +2,7 @@
     <div id="loginCancelContainer" style="display: none;">
         <button id="loginCancelButton">
             <div id="loginCancelIcon">X</div>
-            <span id="loginCancelText">Cancel</span>
+            <span id="loginCancelText">Annuler</span>
         </button>
     </div>
     <div id="loginContent">
@@ -16,7 +16,7 @@
                     </g>
                 </svg>
                 <span class="loginErrorSpan" id="loginEmailError">* Valeur invalide</span>
-                <input id="loginUsername" class="loginField" type="text" placeholder="Adresse e-mail"/>
+                <input id="loginUsername" class="loginField" type="text" placeholder="Nom d'utilisateur"/>
             </div>
             <div class="loginFieldContainer">
                 <svg id="lockSVG" class="loginSVG" viewBox="40 32 60.36 70.43">
@@ -29,7 +29,7 @@
             </div>
             <div id="loginOptions">
                 <span class="loginSpanDim">
-                    <a href="https://auth.terebros.fr/auth/forgot">mot de passe oublié?</a>
+                    <a href="https://auth.mc.aeris-one.fr/auth/forgot">mot de passe oublié?</a>
                 </span>
                 <label id="checkmarkContainer">
                     <input id="loginRememberOption" type="checkbox" checked>
@@ -54,10 +54,10 @@
             </button>
             <div id="loginDisclaimer">
                 <span class="loginSpanDim" id="loginRegisterSpan">
-                    <a href="https://auth.terebros.fr/auth/register">Besoin d'un compte TerebrAuth?</a>
+                    <a href="https://auth.mc.aeris-one.fr/auth/register">Besoin d'un compte?</a>
                 </span>
-                <p class="loginDisclaimerText">Vous avez besoin d'un compte TerebrAuth pour continuer.</p>
-                <p class="loginDisclaimerText">Terebros n'est pas affilié à Mojang Studios.</p>
+                <p class="loginDisclaimerText">Vous avez besoin d'un compte sur notre système d'authentification pour continuer.</p>
+                <p class="loginDisclaimerText">Nous ne sommes pas affiliés à Mojang Studios.</p>
             </div>
         </form>
     </div>
