--- a/app/welcome.ejs
+++ b/app/welcome.ejs
@@ -5,10 +5,10 @@
     </div>-->
     <div id="welcomeContent">
         <img id="welcomeImageSeal" src="assets/images/SealCircle.png"/>
-        <span id="welcomeHeader">WELCOME TO WESTEROSCRAFT</span>
-        <span id="welcomeDescription">Our mission is to recreate the universe imagined by author George RR Martin in his fantasy series, A Song of Ice and Fire.  Through the collaborative effort of thousands of community members, we have sought to create Westeros as accurately and precisely as possible within Minecraft.  The world we are creating is yours to explore.  Journey from Dorne to Castle Black, and if you aren’t afraid, beyond the Wall itself, but best not delay.  As the words of House Stark ominously warn: Winter is Coming.</span>
+        <span id="welcomeHeader">Bienvenue sur Aeris Launcher</span>
+        <span id="welcomeDescription">Ce launcher est conçu pour les personnes ne possédant pas de compte Minecraft afin qu'elles aussi puissent profiter de l'éxperience unique de ce jeu. Le launcher promet une expérience de jeu améliorée par rapport à Minecraft classique, bien que la fonction Multijoueur soit limitée puisque les comptes ne sont pas Premiums.</span>
         <br>
-        <span id="welcomeDescCTA">You are just a few clicks away from Westeros.</span>
+        <span id="welcomeDescCTA">Vous êtes seulement à quelques clics d'une expérience inoubliable !.</span>
         <button id="welcomeButton">
             <div id="welcomeButtonContent">
                 CONTINUE
